# TeleMed_Hearth

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  Full Codebase Audit TeleMed.md  GEMINI.md  HANDOFF.md  LICENSE  README.md  TELEMED_CONTEXT.md  audit_request.md  doctor-ui-index.html  implementation_plan.md  login_identity_export.html  my_doctor_export.html  pubspec.yaml  stitch_export.html  waiting_room_export.html
.agents/workflows/: vitalease-ui-pipeline.md
.claude/commands/: audit.md  new-screen.md
.github/workflows/: build-apk.yml
android/: gradle.properties
android/app/: build.gradle.kts  proguard-rules.pro
doctor-ui/: index.html
integration_test/: app_test.dart
lib/: main.dart
lib/core/constants/: legal_content.dart  practitioner_constants.dart
lib/core/l10n/: app_strings.dart
lib/core/models/: chat_message.dart  specialty.dart
lib/core/providers/: ai_ready_provider.dart  app_navigation_provider.dart  auth_provider.dart  language_provider.dart  medical_session_provider.dart  (+3 more)
model_training/: README.md  gemma4_medical_qlora.py
test/: widget_test.dart
test/unit/: medical_session_provider_test.dart
test/widget/: home_screen_test.dart  login_verification_screen_test.dart
tools/: update_medplum_cnps.dart
tools/finetune/: .env.example  .gitignore  README.md  config.py  evaluate_adapter.py  evaluate_base.py  generate_synthetic.py  merge_train_eval.py  pull_medical.py  pull_romanian.py  pyproject.toml  seed_examples.py  train_gemma4_e4b.py  translate_patient_turns.py
tools/finetune/scripts/: push_adapter_to_hf.py
(+51 files in other folders)
