[project]
name = "telemed-k-finetune"
version = "0.1.0"
description = "Dataset preparation and fine-tuning pipeline for TeleMed_K (Gemma 4 E4B + Unsloth)"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.0,<4.0",
    "google-genai>=0.3,<2.0",
    "huggingface-hub>=0.26,<1.0",
    "anthropic>=0.40,<1.0",
    "pydantic>=2.0,<3.0",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
    "pyarrow>=17.0",
]
